新增JVM内存以及数据库链接资源管理

--- a/datachecker-check/src/main/resources/application.yml
+++ b/datachecker-check/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
   application:
     name: gs_datacheck
   config:
-    location: file:./config/application.yml
+    additional-location: file:config/application.yml
   lifecycle:
     timeout-per-shutdown-phase: 5
   kafka:
