--- a/datachecker-common/pom.xml
+++ b/datachecker-common/pom.xml
@@ -44,6 +44,10 @@
             <artifactId>springdoc-openapi-ui</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.github.oshi</groupId>
+            <artifactId>oshi-core</artifactId>
+        </dependency>
+        <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
         </dependency>
