--- a/datachecker-extract/src/main/resources/application-sink.yml
+++ b/datachecker-extract/src/main/resources/application-sink.yml
@@ -38,10 +38,10 @@ spring:
         minIdle: 10
         maxActive: 20
         maxWait: 60000
-
         timeBetweenEvictionRunsMillis: 60000
         minEvictableIdleTimeMillis: 300000
-        testWhileIdle: false
+        validationQuery: SELECT 1
+        testWhileIdle: true
         testOnBorrow: false
         testOnReturn: false
         poolPreparedStatements: true
