解决maven 构建版本导致工具打包异常问题

--- a/pom.xml
+++ b/pom.xml
@@ -143,7 +143,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
                 <configuration>
                     <source>11</source>
                     <target>11</target>
@@ -153,7 +152,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
                 <configuration>
                     <skipTests>true</skipTests>
                 </configuration>
@@ -161,6 +159,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
+                <version>3.3.0</version>
                 <executions>
                     <execution>
                         <id>copy-resources-config</id>
@@ -172,17 +171,11 @@
                             <outputDirectory>${project.basedir}/gs_datacheck/config</outputDirectory>
                             <resources>
                                 <resource>
-                                    <directory>config/</directory>
+                                    <directory>${project.basedir}/config/</directory>
                                 </resource>
                             </resources>
                         </configuration>
                     </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-                <executions>
                     <execution>
                         <id>copy-cmd-docs</id>
                         <phase>package</phase>
@@ -193,7 +186,7 @@
                             <outputDirectory>${project.basedir}/gs_datacheck/</outputDirectory>
                             <resources>
                                 <resource>
-                                    <directory>/</directory>
+                                    <directory>${project.basedir}/</directory>
                                     <includes>
                                         <include>*.sh</include>
                                         <include>*.md</include>
@@ -207,5 +200,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
