1.日志输出Level优化 2.空库校验不能退出问题修改 3.tinyint(1)类型转换为int 4.对extract向check端注册topic流程进行优化 5.对校验失败结果中差异ID的数量进行限制

--- a/datachecker-check/src/main/resources/application.yml
+++ b/datachecker-check/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
   shutdown: graceful
 logging:
   config: classpath:./config/log4j2.xml
-
+debug: false
 spring:
   memory-monitor-enable: false
   check:
