适配在线校验-新增表场景,抽取服务增加Kafka Topic 数量控制

--- a/config/application-source.yml
+++ b/config/application-source.yml
@@ -6,6 +6,9 @@ logging:
 spring:
   check:
     server-uri: http://127.0.0.1:9000
+    core-pool-size: 2
+    maximum-pool-size: 10
+    maximum-topic-size: 30
   extract:
     schema: test
     databaseType: MS
