--- a/datachecker-extract/src/main/resources/application.yml
+++ b/datachecker-extract/src/main/resources/application.yml
@@ -10,6 +10,7 @@ spring:
     maximum-pool-size: 20
     max-retry-times: 1000
     retry-interval-times: 10000
+    maximum-topic-size: 30
   lifecycle:
     timeout-per-shutdown-phase: 5
   kafka:
