--- a/config/application-source.yml
+++ b/config/application-source.yml
@@ -1,7 +1,7 @@
 server:
   port: 9001
 logging:
-  config: #absolute_path/log4j2source.xml
+  config: config/log4j2source.xml
 
 spring:
   check:
@@ -9,6 +9,7 @@ spring:
     core-pool-size: 2
     maximum-pool-size: 10
     maximum-topic-size: 30
+    maximum-table-slice-size: 100000
   extract:
     schema: test
     databaseType: MS
