--- a/datachecker-extract/src/main/resources/application.yml
+++ b/datachecker-extract/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
     producer:
       retries: 3
       acks: all
-      batch-size: 2097152 # 2M
+      batch-size: 65536 # 64K
       buffer-memory: 67108864 # 64M
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
@@ -36,7 +36,7 @@ spring:
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       fetch-min-size: 1
       max-poll-records: 20000
-      fetch-max-bytes: 536870912  # 512M
+      fetch-max-bytes: 67108864  # 64M
   mvc:
     async:
       request-timeout: 60000
