--- a/datachecker-common/pom.xml
+++ b/datachecker-common/pom.xml
@@ -20,11 +20,11 @@
     <parent>
         <groupId>org.opengauss</groupId>
         <artifactId>gs_datachecker</artifactId>
-        <version>0.0.1</version>
+        <version>5.0.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>datachecker-common</artifactId>
-    <version>0.0.1</version>
+    <version>${gs.datacheck.version}</version>
     <name>datachecker-common</name>
     <packaging>jar</packaging>
     <description>datachecker-common</description>
@@ -32,7 +32,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>11</java.version>
-        <datachecker.version>0.0.1</datachecker.version>
     </properties>
     <dependencies>
         <dependency>
