--- a/datachecker-extract/pom.xml
+++ b/datachecker-extract/pom.xml
@@ -20,12 +20,12 @@
     <parent>
         <groupId>org.opengauss</groupId>
         <artifactId>gs_datachecker</artifactId>
-        <version>0.0.1</version>
+        <version>5.0.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>datachecker-extract</artifactId>
-    <version>0.0.1</version>
+    <version>${gs.datacheck.version}</version>
     <name>datachecker-extract</name>
     <packaging>jar</packaging>
     <description>datachecker-extract</description>
@@ -34,7 +34,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>11</java.version>
-        <datachecker.version>0.0.1</datachecker.version>
     </properties>
 
     <dependencies>
@@ -55,7 +54,7 @@
         <dependency>
             <groupId>org.opengauss</groupId>
             <artifactId>datachecker-common</artifactId>
-            <version>${datachecker.version}</version>
+            <version>${gs.datacheck.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -79,7 +78,11 @@
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
-            <artifactId>druid</artifactId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -89,6 +92,10 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -164,7 +171,7 @@
                             <artifactId>datachecker-common</artifactId>
                         </include>
                     </includes>
-                    <outputDirectory>${project.basedir}/../gs_datacheck</outputDirectory>
+                    <outputDirectory>${project.basedir}/../gs_datacheck_${gs.datacheck.version}</outputDirectory>
                 </configuration>
                 <executions>
                     <execution>
@@ -186,7 +193,7 @@
                             <goal>copy-dependencies</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>${project.basedir}/../gs_datacheck/lib</outputDirectory>
+                            <outputDirectory>${project.basedir}/../gs_datacheck_${gs.datacheck.version}/lib</outputDirectory>
                             <excludeGroupIds>datachecker-check</excludeGroupIds>
                             <includeScope>runtime</includeScope>
                         </configuration>
