--- a/datachecker-mock-data/pom.xml
+++ b/datachecker-mock-data/pom.xml
@@ -74,7 +74,7 @@
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
-            <artifactId>druid</artifactId>
+            <artifactId>druid-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
             <groupId>net.openhft</groupId>
