引入mybatis插件，优化数据查询逻辑

--- a/datachecker-extract/src/main/resources/application.yml
+++ b/datachecker-extract/src/main/resources/application.yml
@@ -40,7 +40,9 @@ spring:
   mvc:
     async:
       request-timeout: 60000
-
+mybatis:
+  mapper-locations: classpath*:mapper/*Mapper.xml
+  configuration.map-underscore-to-camel-case: true
 feign:
   okhttp:
     enabled: true
