--- a/datachecker-check/pom.xml
+++ b/datachecker-check/pom.xml
@@ -126,7 +126,7 @@
                             <artifactId>datachecker-common</artifactId>
                         </include>
                     </includes>
-                    <outputDirectory>${project.basedir}/../gs_datacheck_${gs.datacheck.version}</outputDirectory>
+                    <outputDirectory>${project.basedir}/../gs_datacheck-${gs.datacheck.version}</outputDirectory>
                 </configuration>
                 <executions>
                     <execution>
@@ -148,7 +148,7 @@
                             <goal>copy-dependencies</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>${project.basedir}/../gs_datacheck_${gs.datacheck.version}/lib</outputDirectory>
+                            <outputDirectory>${project.basedir}/../gs_datacheck-${gs.datacheck.version}/lib</outputDirectory>
                             <excludeGroupIds>datachecker-extract</excludeGroupIds>
                             <includeScope>runtime</includeScope>
                         </configuration>
