--- a/config/application-sink.yml
+++ b/config/application-sink.yml
@@ -7,8 +7,9 @@ spring:
     server-uri: http://127.0.0.1:9000
     core-pool-size: 1
     maximum-pool-size: 5
-    maximum-topic-size: 10
+    maximum-topic-size: 3
     maximum-table-slice-size: 100000
+    extend-maximum-pool-size: 10
   extract:
     schema: test
     databaseType: OG
