--- a/config/application-source.yml
+++ b/config/application-source.yml
@@ -8,8 +8,9 @@ spring:
     server-uri: http://127.0.0.1:9000
     core-pool-size: 1
     maximum-pool-size: 5
-    maximum-topic-size: 5
+    maximum-topic-size: 3
     maximum-table-slice-size: 100000
+    extend-maximum-pool-size: 10
   extract:
     schema: test
     databaseType: MS # For MySQL
