log4j2日志并发Block问题修改-采用异步日志方式并修改默认线程池资源

--- a/datachecker-check/src/main/resources/application.yml
+++ b/datachecker-check/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 server:
   port: 9000
   shutdown: graceful
+  tomcat:
+    threads:
+      max: 5
 logging:
   config: classpath:./config/log4j2.xml
 debug: false
