--- a/datachecker-extract/pom.xml
+++ b/datachecker-extract/pom.xml
@@ -85,6 +85,10 @@
             <artifactId>opengauss-jdbc</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>ojdbc6</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
         </dependency>
