--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,8 @@
         <spring.cloud.version>2021.0.0</spring.cloud.version>
         <java.version>11</java.version>
         <mysql.connector.java.version>8.0.30</mysql.connector.java.version>
-        <opengauss.jdbc.version>3.0.0</opengauss.jdbc.version>
+        <opengauss.jdbc.version>5.1.0-og</opengauss.jdbc.version>
+        <oracle.jdbc.version>11.2.0.3</oracle.jdbc.version>
         <druid.version>1.2.8</druid.version>
         <mybatis.version>2.2.2</mybatis.version>
         <lombok.version>1.18.24</lombok.version>
@@ -100,6 +101,12 @@
                 <groupId>org.opengauss</groupId>
                 <artifactId>opengauss-jdbc</artifactId>
                 <version>${opengauss.jdbc.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.oracle</groupId>
+                <artifactId>ojdbc6</artifactId>
+                <version>${oracle.jdbc.version}</version>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
