增加maven repository 解决流水线构建拉取新增依赖失败导致的构建问题

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,10 @@
     </modules>
     <repositories>
         <repository>
+            <id>aliyun</id>
+            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+        </repository>
+        <repository>
             <id>confluent</id>
             <url>http://packages.confluent.io/maven/</url>
         </repository>
