chameleon与datachecker协同使用，浮点类型数据存在不一致问题

--- a/datachecker-check/src/main/resources/application.yml
+++ b/datachecker-check/src/main/resources/application.yml
@@ -12,6 +12,7 @@ spring:
   check:
     core-pool-size: 2
     maximum-pool-size: 10
+    floating-point-data-supply-zero: false
   application:
     name: gs_datacheck
   config:
