oralce场景 blob字段为空时获取null以及Raw类型适配

--- a/datachecker-extract/src/main/resources/application-sink.yml
+++ b/datachecker-extract/src/main/resources/application-sink.yml
@@ -10,6 +10,7 @@ spring:
   extract:
     schema: jack
     databaseType: OG  #OG opengauss
+    object-size-expansion-factor: 4
     endpoint: SINK
     dataLoadMode: jdbc # jdbc or csv
     query-dop: 1 # jdbc Parallel Query  config
