--- a/datachecker-extract/src/main/resources/application-source.yml
+++ b/datachecker-extract/src/main/resources/application-source.yml
@@ -10,6 +10,7 @@ spring:
   extract:
     schema: test
     databaseType: MS  # MS mysql
+    object-size-expansion-factor: 4
     endpoint: SOURCE
     dataLoadMode: jdbc # jdbc or csv
     query-dop: 1 # jdbc Parallel Query  config
