chameleon与校验协同-大表场景调度流程优化

--- a/datachecker-check/src/main/resources/application.yml
+++ b/datachecker-check/src/main/resources/application.yml
@@ -41,7 +41,8 @@ spring:
     schema-tables: ${spring.csv.path}/${spring.csv.schema}_information_schema_tables.csv
     schema-columns: ${spring.csv.path}/${spring.csv.schema}_information_schema_columns.csv
     sleep-interval: 100 # 毫秒
-
+    task-dispatcher-interval: 3 # csv task dispatcher period (unit second)
+    max-dispatcher-size: 5 # csv task dispatcher size
 data:
   check:
     data-path: local_path/xxx
