check 单元测试修复

--- a/datachecker-check/src/main/resources/application.yml
+++ b/datachecker-check/src/main/resources/application.yml
@@ -13,6 +13,7 @@ spring:
     core-pool-size: 2
     maximum-pool-size: 10
     floating-point-data-supply-zero: false
+    heart-beat-heath: true
   application:
     name: gs_datacheck
   config:
