--- a/datachecker-common/pom.xml
+++ b/datachecker-common/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.opengauss</groupId>
         <artifactId>gs_datachecker</artifactId>
-        <version>6.0.0</version>
+        <version>6.0.0.rc1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>datachecker-common</artifactId>
