版本号与资料信息修改

--- a/datachecker-common/pom.xml
+++ b/datachecker-common/pom.xml
@@ -20,11 +20,11 @@
     <parent>
         <groupId>org.opengauss</groupId>
         <artifactId>gs_datachecker</artifactId>
-        <version>6.0.0.rc1</version>
+        <version>6.0.0rc1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>datachecker-common</artifactId>
-    <version>${gs.datacheck.version}</version>
+    <version>${project.parent.version}</version>
     <name>datachecker-common</name>
     <packaging>jar</packaging>
     <description>datachecker-common</description>
