--- a/pom.xml
+++ b/pom.xml
@@ -36,8 +36,10 @@
         <zero.allocation.hashing.version>0.15</zero.allocation.hashing.version>
         <io.confluent.version>7.0.1</io.confluent.version>
         <snakeyaml.version>2.0</snakeyaml.version>
+        <snappy-java.version>1.1.10.5</snappy-java.version>
         <powermock.version>2.0.0</powermock.version>
         <commons.cli.version>1.4</commons.cli.version>
+        <bcpkix-jdk15on.version>1.70</bcpkix-jdk15on.version>
         <commons.fileupload.version>1.5</commons.fileupload.version>
         <commons.compress.version>1.26.1</commons.compress.version>
         <commons.collection.version>4.4</commons.collection.version>
@@ -182,6 +184,16 @@
                 <groupId>io.confluent</groupId>
                 <artifactId>kafka-avro-serializer</artifactId>
                 <version>${io.confluent.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.xerial.snappy</groupId>
+                <artifactId>snappy-java</artifactId>
+                <version>${snappy-java.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.bouncycastle</groupId>
+                <artifactId>bcpkix-jdk15on</artifactId>
+                <version>${bcpkix-jdk15on.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.alibaba</groupId>
