--- a/datachecker-extract/pom.xml
+++ b/datachecker-extract/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.opengauss</groupId>
         <artifactId>gs_datachecker</artifactId>
-        <version>6.0.0</version>
+        <version>7.0.0rc1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
