--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>org.opengauss</groupId>
     <artifactId>gs_datachecker</artifactId>
-    <version>6.0.0</version>
+    <version>7.0.0rc1</version>
     <packaging>pom</packaging>
 
     <name>gs_datachecker</name>
