--- a/datachecker-extract/src/main/resources/application-sink.yml
+++ b/datachecker-extract/src/main/resources/application-sink.yml
@@ -43,4 +43,5 @@ spring:
       maxPoolPreparedStatementPerConnectionSize: 20
       useGlobalDataSourceStat: true
       connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
+      maxAllowedPacketSize: 1073741824
 
