--- a/datachecker-extract/src/main/resources/application-source.yml
+++ b/datachecker-extract/src/main/resources/application-source.yml
@@ -49,3 +49,4 @@ spring:
       maxPoolPreparedStatementPerConnectionSize: 20
       useGlobalDataSourceStat: true
       connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
+      maxAllowedPacketSize: 1073741824
