修复联合主键抽取数据重复问题，分片内存溢出问题，主键稀疏导致查询次数过多

--- a/datachecker-check/src/main/resources/application.yml
+++ b/datachecker-check/src/main/resources/application.yml
@@ -72,6 +72,7 @@ data:
     check-with-sync-extracting: true
     retry-fetch-record-times: 5
     error-rate: 30
+    create-repair-sql: false
     max-retry-times: 1000
     retry-interval-times: 2000
     # auto-delete-topic :  Configure whether to automatically delete topic.
