--- a/datachecker-extract/src/main/resources/application-sink.yml
+++ b/datachecker-extract/src/main/resources/application-sink.yml
@@ -44,4 +44,6 @@ spring:
       useGlobalDataSourceStat: true
       connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
       maxAllowedPacketSize: 1073741824
+      validation-query-timeout: 30
+      break-after-acquire-failure: false
 
