--- a/config/application.yml
+++ b/config/application.yml
@@ -18,6 +18,7 @@ data:
     # 0 is not delete; 1 is delete when checked all completed ; 2 is delete when checked a table
     auto-delete-topic: 1
     increment-max-diff-count: 1000
+    create-repair-sql: false
     max-retry-times: 200
 rules:
   # There are three types of filtering rules: table-level rules, row-level rules, and column-level rules.
